--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <form action="/upload" method="POST" class="dropzone" id="my-dropzone">
+    <form action="/upload" method="POST" class="dropzone" id="my-dropzone" enctype="multipart/form-data">
         <div class="fallback">
             <input name="file" type="file" multiple />
             <input type="submit" value="Upload" />
