add CinCan header

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>add2git-lfs</title>
+    <title>CinCan: add2git-lfs</title>
 
     <link href="/static/dropzone.css" type="text/css" rel="stylesheet" />
 
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+    <h1 align="center">CinCan: add2git-lfs</h1>
     <form action="/upload" method="POST" class="dropzone" id="my-dropzone" enctype="multipart/form-data">
         <div class="fallback">
             <input name="file" type="file" multiple />
